# pkmBattleSim

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  build.sh
config/pkm/: 233.json
data/pkm/: menu.json  pkm.json  place.json
data/pkm/app_menus/: 1.json
data/pkm/menu/: battle_menu.json  first_pkm_specific_menu.json  main_menu.json  npc_menu.json
data/pkm/npc/: npc.json
data/pkm/texts/: 1.json
src/: main.cpp  predefined.cpp
src/basic_models/: basic.cpp  basic.hpp  battle.cpp  battle.hpp  defs.hpp  evolve.cpp  evolve.hpp  item.hpp  npc.cpp  npc.hpp  pkm.cpp  pkm.hpp  places.hpp  player.cpp  player.hpp  random.hpp  skills.cpp  skills.hpp  texts.cpp  texts.hpp
src/thread/: qqapi.cpp  qqapi.hpp  threads.cpp  threads.hpp
src/ui/: menu.cpp  menu.hpp  menu_action.cpp  sence.hpp
src/utils/: file_utils.cpp  image_utils.cpp  image_utils.hpp  json_utils.cpp  myutils.hpp  string_utils.cpp  utils.hpp
